ensured ownership of order's and review's selected routes
