# src/model/Order.js
@@ -22,7 +22,7 @@ const orderSchema = new Schema(
         },
         orderStatus: {
             type: String,
-            enum: ["pending", "shipped", "delivered", "cancelled "],
+            enum: ["pending", "shipped", "delivered", "cancelled"],
             default: "pending",
         },
     },
